tests/ui/reference_to_reference.stderr
error: C++ does not allow references to references
 --> $DIR/reference_to_reference.rs:7:23
  |
7 |         fn repro_c(t: &&&ThingC);
  |                       ^^^^^^^^^

error: C++ does not allow references to references
  --> $DIR/reference_to_reference.rs:13:23
   |
13 |         fn repro_r(t: &&&ThingR);
   |                       ^^^^^^^^^
